Fix startup/runtime resolution issues revealed by integration tests
Exclude compile-time-only imports from OSGi manifests, remove obsolete
CORBA omgapi bundle from desktop assemblies, and harden LAF initialization.